# rooted-portal-api

./: .editorconfig  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  example.env  gunicorn_conf.py  pyproject.toml
.cursor/rules/: senior-backend-engineer.mdc  standard.mdc
.github/workflows/: cicd.yml  release.yml
alembic/: env.py
alembic/versions/: 2025_12_26_1859-5786a69aae71.py
docs/: ARCHITECTURE.md  README.md
portal/: __init__.py  __main__.py  config.py  container.py  main.py
portal/apps/: __init__.py
portal/apps/admin/: README.md  __init__.py
portal/apps/admin/routers/: __init__.py
portal/apps/admin/serializers/: __init__.py
portal/authorization/: __init__.py
portal/cli/: __init__.py  bible.py  import_bible.py  main.py
portal/exceptions/: __init__.py  validation_errors.py
portal/exceptions/responses/: __init__.py  auth.py  base.py
portal/handlers/: __init__.py  bible.py
portal/libs/authorization/: __init__.py  auth_config.py  permission_checker.py
portal/libs/consts/: cache_keys.py  enums.py  permission.py
portal/libs/contexts/: api_context.py  request_context.py  request_session_context.py  user_context.py
portal/libs/database/: __init__.py  aio_orm.py  aio_pg.py  aio_redis.py  orm.py  session_mock.py  session_proxy.py
portal/libs/decorators/: sentry_tracer.py  timer.py
portal/libs/depends/: __init__.py  file_validation.py  rate_limiters.py
portal/libs/http_client/: __init__.py  http_client.py
portal/libs/logger/: __init__.py  const.py  generator.py  logger.py
portal/libs/shared/: __init__.py  asserts.py  converter.py  validator.py
portal/libs/smtp_client/: __init__.py  smtp_client.py
portal/libs/utils/: async_worker.py  lifespan.py
portal/middlewares/: __init__.py  auth_middleware.py  core_request.py
portal/models/: __init__.py  bible.py  rbac.py
portal/models/mixins/: __init__.py  audit_mixin.py  context.py
portal/providers/: __init__.py
portal/routers/: __init__.py  api_root.py
portal/routers/apis/v1/: __init__.py  bible.py
portal/schemas/: __init__.py  auth.py  base.py  rate_limiter.py
portal/serializers/: __init__.py
portal/serializers/v1/: __init__.py  bible.py
